[workspace]
members = ["general/echo/kmdf/driver/*", "general/echo/kmdf/exe"]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/microsoft/windows-rust-driver-samples"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[workspace.dependencies]
wdk = { git = "https://github.com/svasista-ms/windows-drivers-rs.git", branch = "move-infverif-latest"}
wdk-alloc = { git = "https://github.com/svasista-ms/windows-drivers-rs.git", branch = "move-infverif-latest" }
wdk-build = { git = "https://github.com/svasista-ms/windows-drivers-rs.git", branch = "move-infverif-latest" }
wdk-panic = { git = "https://github.com/svasista-ms/windows-drivers-rs.git", branch = "move-infverif-latest" }
wdk-sys = { git = "https://github.com/svasista-ms/windows-drivers-rs.git", branch = "move-infverif-latest" }

