[package]
name = "echo-2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.77.0"
edition.workspace = true
publish.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true
paste = "1.0.14"

[build-dependencies]
wdk-build.workspace = true

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]